# os_camp_be

./: .env  .gitignore  Cargo.toml  diesel.toml  readme.md  rust-toolchain.toml  schema.rs
migrations/2024-08-13-054234_create_users/: down.sql  up.sql
migrations/2024-08-27-140629_create_posts/: up.sql
src/: lib.rs  main.rs  schema.rs
src/config/: database.rs
src/models/: user_info  user_info.rs
src/routes/: mod.rs  score.rs  user.rs
src/task/: getScoreTask.rs  get_score_task.rs  mod.rs
