[package]
name = "os_web"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.12",features = ["json"]}
diesel = { version = "2.0", features = ["mysql","r2d2"] }
diesel_cli = { version = "2.0", features = ["mysql"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.13"

[build-dependencies]